--- a/force-app/main/default/lwc/week1_countries/week1_countries.html
+++ b/force-app/main/default/lwc/week1_countries/week1_countries.html
@@ -1,9 +1,10 @@
 <template>
     <lightning-card title="Countries">
         <div class="slds-var-m-around_medium">
+            Countries I visited
             <template for:each={countries} for:item="country">
                 <div key={country}>
-                    My country "{country}",
+                     "{country}",
                 </div>
                 <!-- <div key={country}>
                     Your Country {country} 
