--- a/force-app/main/default/lwc/userSkillsWithColor/userSkillsWithColor.html
+++ b/force-app/main/default/lwc/userSkillsWithColor/userSkillsWithColor.html
@@ -20,7 +20,7 @@
           </div>
       </lightning-card> 
     </div>
-  </div> 
+  </div> <br><br>
 
 
   <lightning-card title="Developer Skills" icon-name="standard:answer_public"> 
